@startuml

title __TREATMENTPREDICTIONMVC's Class Diagram__\n

  package diploma {
    package diploma.treatmentPredictionMVC {
      class TreatmentPredictionActivity {
          + calculateTreatment()
          + createPdfFile()
          - addTableHeader()
          - addRows()
      }
    }
  }
  

  package diploma {
    package diploma.treatmentPredictionMVC {
      class TreatmentPredictionController {
          - idField : TextField
          - surnameField : TextField
          - firstnameField : TextField
          - middlenameField : TextField
          - uraField : TextField
          - sexField : TextField
          - backBtn : Button
          - saveBtn : Button
          - firstGridPane : GridPane
          - secondGridPane : GridPane
          - thirdGridPane : GridPane
          - resultGridPane : GridPane
          - x1Field : TextField
          - x2Field : TextField
          - x3Field : TextField
          - x4Field : TextField
          - x5Field : TextField
          - x6Field : TextField
          - x7Field : TextField
          - x8Field : TextField
          - x9Field : TextField
          - x10Field : TextField
          - x11Field : TextField
          - x12Field : TextField
          - x13Field : TextField
          - x14Field : TextField
          - x15Field : TextField
          - k1Field : TextField
          - k2Field : TextField
          - treatmentLabel : Label
          - resultLabel : Label
          + initData()
          - setFields()
          + initialize()
          + backToMenu()
          + calculateTreatment()
          + saveResult()
          - getResult()
      }
    }
  }
  

  TreatmentPredictionController o-- Patient : patient
  TreatmentPredictionController o-- TreatmentPredictionActivity : tpActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
